<resources>
    <string name="app_name">FitCom Application</string>

    <!--BUTTON STRINGS-->
    <string name="button_str_exercise">EXERCISE</string>
    <string name="button_str_nutrition">NUTRITION</string>
    <string name="button_str_exit">SIGN OUT</string>
    <string name="button_str_sign_in">SIGN IN</string>
    <string name="button_str_nav_to_sign_up">CREATE A NEW USER</string>
    <string name="button_str_nav_to_sign_in">Already Have An Account?</string>
    <string name="button_str_sign_up">SIGN UP</string>
    <string name="button_str_send_recipe">SEND RECIPE</string>
    <string name="button_str_send_article">SEND ARTICLE</string>
    <string name="button_str_insert_article">ADD ARTICLE</string>
    <string name="button_str_insert_exercise">ADD EXERCISE</string>
    <string name="button_str_insert_recipe">ADD RECIPE</string>
    <string name="button_str_send_exercise">ADD EXERCISE</string>
    <string name="button_str_reset_password">RESET PASSWORD</string>

    <!--HINT-->
    <string name="hint_str_email">e-mail</string>
    <string name="hint_str_password">password</string>
    <string name="hint_str_age">age</string>
    <string name="hint_str_recipe_title">recipe title</string>
    <string name="hint_str_recipe_desc">recipe description</string>
    <string name="hint_str_article_title">article title</string>
    <string name="hint_str_article_desc">article content</string>
    <string name="hint_str_exercise_name">exercise name</string>
    <string name="hint_str_exercise_desc">exercise description</string>
    <string name="hint_str_exercise_category">exercise category</string>
    <string name="hint_str_fullName">name surname</string>
    <string name="hint_str_exercise_category_tr">category description in other language</string>
    <string name="hint_str_exercise_description_tr">exercise description in other language</string>
    <string name="hint_str_article_title_tr">article title in other language</string>
    <string name="hint_str_article_desc_tr">article description in other language</string>
    <string name="hint_str_recipe_title_tr">recipe title in other language</string>
    <string name="hint_str_recipe_desc_tr">recipe description in other language</string>
    <string name="hint_str_prep_time">preparation time</string>

    <!--STRINGS-->
    <string name="str_article_name">NAME</string>
    <string name="str_article_desc">DESCRIPTION</string>
    <string name="str_terms"><u>TERMS AND CONDITIONS</u></string>
    <string name="str_account_type">TRAINER</string>
    <string name="str_carb">Carbs: </string>
    <string name="str_fat">Fat: </string>
    <string name="str_protein">Protein: </string>
    <string name="str_calorie">calorie</string>
    <string name="str_motto">Join our community to access exercises and recipes.</string>
    <string name="str_fitcom" translatable="false">FITCOM</string>
    <string name="str_download">Download the FitCom Application!</string>
    <string name="str_successful">Successful</string>
    <string name="str_welcome">Welcome to FitCom</string>
    <string name="str_main_exercise">Plenty of \nExercises</string>
    <string name="str_main_recipe">Plenty of \nRecipes</string>
    <string name="str_main_pt">Personal \nTrainers</string>

    <!--TAB ITEMS-->
    <string name="tab_item_all_exercises">EXERCISES</string>
    <string name="tab_item_my_exercises">PROGRAMS</string>
    <string name="tab_item_all_nutritions">NUTRITION</string>
    <string name="tab_item_my_nutritions">MEALS</string>

    <!--TABS-->
    <string name="tab_hom">HOME</string>
    <string name="tab_exercise">EXERCISE</string>
    <string name="tab_nutr">NUTRITION</string>
    <string name="tab_blog">BLOG</string>
    <string name="tab_trainer">TRAINER</string>

    <!-- OTHER -->
    <string name="lang"><u>LANGUAGES</u></string>
    <string name="forget_pass"><u>Forget your password?</u></string>
    <string name="rights">2021 FitCom Inc. All Rights Are Resereved.</string>
    <string name="exit_sec"><u>SIGN OUT</u></string>
    <string name="email_link" translatable="false"><u>fitcomapplication@gmail.com</u></string>
    <string name="insta_link" translatable="false"><u>@fitcomapplication</u></string>
    <string name="url" translatable="false">https://www.instagram.com/fitcomapplication/</string>
    <string name="subj">About FitCom Personal Training</string>
    <string name="about_sec"><u>ABOUT</u></string>
    <string name="select_img">Select Image</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="str_tr" translatable="false">tr</string>
    <string name="str_en" translatable="false">en</string>
    <string name="about">FitCom Application is developed by: \n Osman Can Cinar \n Mahmut Berke Yaylaci \n Cenk Atahan Ozbek \n Ramazan Kazali </string>
    <string name="str_reset_pass">In order to reset your password,\n enter your e-mail</string>
    <string name="check_email">Check Your Email Please.</string>
    <string name="hide">Hide</string>
    <string name="terms_but_detailed">Our application is served users to access exercises, nutrition and personal trainers. Our application does not accepts
    any responsibility about injuries while using the app. By accepting these terms, our application has the rights to
    use your name and e-mail.</string>
    <string name="click">(Click to see in detail)</string>
    <string name="to_translate">Take me to translate</string>
    <string name="url2" translatable="false">https://translate.google.com/</string>
    <string name="supported_langs">Currently we are only supporting Turkish and English languages.</string>
    <string name="for_how_many" translatable="false">1-2</string>
    <string name="how_many_tr" translatable="false">dk</string>
    <string name="how_many_en" translatable="false">min</string>

    <!--ERRORS-->
    <string name="error_fields">Some fields are empty.</string>
    <string name="error_age">You must be at least 18!</string>
    <string name="error_terms">To use the app, the terms and conditions must accepted!</string>
    <string name="error_password_match">Passwords does not match!</string>
    <string name="error_email">Enter a valid email address!</string>
    <string name="error_error">Error!</string>
    <string name="error_img">Choose an Image!</string>
</resources>