<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menulong"
    tools:context=".TrainerScreen.InsertListFragment"
    android:padding="24sp">


    <Button
        android:id="@+id/button_insert_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/button_str_insert_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_insert_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_str_insert_article"
        app:layout_constraintStart_toStartOf="@+id/button_insert_recipe"
        app:layout_constraintTop_toBottomOf="@+id/button_insert_recipe" />

    <Button
        android:id="@+id/button_insert_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_str_insert_recipe"
        app:layout_constraintStart_toStartOf="@+id/button_insert_exercise"
        app:layout_constraintTop_toBottomOf="@+id/button_insert_exercise" />

</androidx.constraintlayout.widget.ConstraintLayout>