<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/insertbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainerScreen.InsertArticleFragment">

    <ImageButton
        android:id="@+id/button_insertArticle_backToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText_article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="40"
        android:ems="10"
        android:hint="@string/hint_str_article_title"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_article_title_tr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="40"
        android:ems="10"
        android:hint="@string/hint_str_article_title_tr"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_article_title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_article_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_str_article_desc"
        android:maxLines="6"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/editText_article_title"
        app:layout_constraintTop_toBottomOf="@+id/editText_article_title_tr"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_article_desc_tr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_str_article_desc_tr"
        android:maxLines="6"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/editText_article_title"
        app:layout_constraintTop_toBottomOf="@+id/editText_article_desc"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_send_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_str_send_article"
        app:layout_constraintEnd_toEndOf="@+id/button_translate_2"
        app:layout_constraintStart_toStartOf="@+id/button_translate_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_article_desc_tr" />

    <Button
        android:id="@+id/button_translate_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/to_translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_send_article" />


</androidx.constraintlayout.widget.ConstraintLayout>