<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainerScreen.InsertExerciseFragment">

    <ImageButton
        android:id="@+id/button_insertExer_backToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_str_exercise_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/editText_exercise_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_str_exercise_desc"
        android:inputType="textMultiLine"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText_exercise_category"
        app:layout_constraintTop_toBottomOf="@+id/editText_exercise_category" />

    <EditText
        android:id="@+id/editText_exercise_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_str_exercise_category"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editText_exercise_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_exercise_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/button_send_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_str_send_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_select_img"
        app:layout_constraintTop_toBottomOf="@+id/button_select_img"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_select_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_exercise_desc"
        app:layout_constraintVertical_bias="0.312" />

    <ImageView
        android:id="@+id/imageViewExercise"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>